--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/txtExpenseTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bar à jeux"
+                android:text="Game bar"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
